fixing links on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1374,7 +1374,7 @@ h5 small {
    }
 
    .portfolio-container .title {
-      font-size: 2rem;
+      font-size: 1.7rem;
       text-align: center;
       margin-top: 15px;
    }
